--- a/indeks.html
+++ b/indeks.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 
@@ -52,7 +50,7 @@
                     <div class="card-body bg-warning">
                         <p class="card-text text-center">5 Kegiatan Kelas Virtual Menyenangkan Sebelum Libur Sekolah</p>
                     </div>
-                    <a href=""><button type="button" class="btn btn-warning btn-sm" style="width:100%; border-radius: 0;">Baca Selengkapnya</button></a>
+                    <a href="artikel1.html"><button type="button" class="btn btn-warning btn-sm" style="width:100%; border-radius: 0;">Baca Selengkapnya</button></a>
                     <div class="card-footer bg-secondary" style="border-bottom-left-radius: 20px; border-bottom-right-radius: 20px; ">
                         <small class="text-white">Last updated 3 mins ago</small>
                     </div>
@@ -62,7 +60,7 @@
                     <div class="card-body bg-warning">
                         <p class="card-text text-center">5 Web dan Aplikasi Baca Buku Online Gratis. Legal dan Bermanfaat!</p>
                     </div>
-                    <a href=""><button type="button" class="btn btn-warning btn-sm" style="width:100%; border-radius: 0;">Baca Selengkapnya</button></a>
+                    <a href="artikel2.html"><button type="button" class="btn btn-warning btn-sm" style="width:100%; border-radius: 0;">Baca Selengkapnya</button></a>
                     <div class="card-footer bg-secondary" style="border-bottom-left-radius: 20px; border-bottom-right-radius: 20px; ">
                         <small class="text-white">Last updated 3 mins ago</small>
                     </div>
@@ -83,7 +81,7 @@
                                 Kode Promo : jawara_bisa <br>
                                 Expired on July 10, 2022
                             </p>
-                            <a href="transaksiA.html" class="btn btn-primary">Ambil Promo</a>
+                            <a href="promo.html" class="btn btn-primary">Ambil Promo</a>
                         </div>
                     </div>
                 </div>
@@ -98,7 +96,7 @@
                                 Kode Promo : bahagia_selalu <br>
                                 Expired on July 10, 2022
                             </p>
-                            <a href="transaksiA.html" class="btn btn-primary">Ambil Promo</a>
+                            <a href="promo.html" class="btn btn-primary">Ambil Promo</a>
                         </div>
                     </div>
                 </div>
@@ -113,7 +111,7 @@
                                 Kode Promo : sama_sama <br>
                                 Expired on July 10, 2022
                             </p>
-                            <a href="transaksiA.html" class="btn btn-primary">Ambil Promo</a>
+                            <a href="promo.html" class="btn btn-primary">Ambil Promo</a>
                         </div>
                     </div>
                 </div>
@@ -142,7 +140,7 @@
                     </a>
                 </div>
                 <div class="col-8 text-center" style="display: flex; align-items: center;">
-                    <h5><a class="text-dark pl-3" href="artikel3.html">Industri Kampus Vs Kampus Industri</a></h5>
+                    <h5><a class="text-dark pl-3" href="artikel4.html">Industri Kampus Vs Kampus Industri</a></h5>
                 </div>
                 <div class="col-1"></div>
             </div>
@@ -155,7 +153,7 @@
                     </a>
                 </div>
                 <div class="col-8 text-center" style="display: flex; align-items: center;">
-                    <h5><a class="text-dark pl-3" href="artikel3.html">5 Film Tentang Masa Depan Dunia Pendidikan & Sekolah Digital</a></h5>
+                    <h5><a class="text-dark pl-3" href="artikel5.html">5 Film Tentang Masa Depan Dunia Pendidikan & Sekolah Digital</a></h5>
                 </div>
                 <div class="col-1"></div>
             </div>
@@ -163,7 +161,6 @@
         </div>
     </section>
     <br><br><br><br>
-
     <!-- footer -->
     <div class="" style="background-color: #EB8947 ;">
         <div class="row">
@@ -202,7 +199,6 @@
             </div>
             <div class="col-md-2"></div>
         </div>
-    </div>
 </body>
 
 </html>
